tests/abstract-locations-minimal-merge/abstract-locations-minimal-merge.exp
No errors!

Changing the exported type should produce downstream errors.
We should recheck all files, but should not remerge files that are not recursive sig dependents.
Error ------------------------------------------------------------------------------------------- impl-dependent.js:3:30

Cannot return empty string because string [1] is incompatible with number [2].

   impl-dependent.js:3:30
   3| function bar(): Foo { return ''; }
                                   ^^ [1]

References:
   impl-dependent.js:3:17
   3| function bar(): Foo { return ''; }
                      ^^^ [2]


Error -------------------------------------------------------------------------------------------- sig-dependent.js:3:37

Cannot return empty string because string [1] is incompatible with number [2].

   sig-dependent.js:3:37
   3| export function bar(): Foo { return ''; }
                                          ^^ [1]

References:
   sig-dependent.js:3:24
   3| export function bar(): Foo { return ''; }
                             ^^^ [2]



Found 2 errors

========Skipping stats========
Merge skipped 1 of 5 modules
Check will skip 1 of 5 files
